--- a/webapp/src/app/ui-component/dialog/index.scss
+++ b/webapp/src/app/ui-component/dialog/index.scss
@@ -4,5 +4,4 @@
 
 .mdc-dialog__content {
     padding-bottom: 0;
-    overflow-x: hidden;
 }
